--- a/index.html
+++ b/index.html
@@ -22,40 +22,43 @@
 
         <section class="terminal-body" id="initialSection">
 
-            <p class="terminal-intro" id="fixedText1">
+            <p class="terminal-intro" id="t1">
                 <span class="user">Shrey Singhal@ShreySinghal</span>
-                <span class="branch">(main)</span>
-                <span class="arrow"> ~></span>
-                cat ./about.txt(v1.1.18)
+                <span class="branch">(main)</spand=>
+                <span class="arrow"> ~></span=>
+                <span id="fixedText1" class="text-Intro">cat ./about.txt(v1.1.18)</span>
             </p>
 
-            <p class="terminal-intro" id="fixedText2">
+            <p class="terminal-intro" id="t2">
                 <span class="user">Shrey Singhal@ShreySinghal</span>
                 <span class="branch">(main)</span>
                 <span class="arrow"> ~></span>
-                You just stepped into Shrey's public terminal. I am currently being built up. Once ready, I will walk
+                <span id="fixedText2" class="text-Intro">Hi, You just stepped into Shrey's public terminal. I am currently being built up. Once ready, I will walk
                 you through the life of Shrey. You will be able to ask me about his areas of interests, hobbies,
                 professional experiences and much more. Currently, I am built to support desktop version. I'll be soon
                 available on mobile. Pardon me for any inconvenience and you can always reach out to the developer
                 (shreynbd@gmail.com) for any queries/suggestions. As I continue to develop, you can always checkout my
-                current features. Looking forward to an amazing interaction. <br> <br> Thanks!
+                current features. Looking forward to an amazing interaction. <br> <br> Thanks! </span>
             </p>
 
             <!-- To get Started -->
-            <p class="terminal-intro" id="animatedText1">
+            <p class="terminal-intro" id="t3">
                 <span id="termText1" class="user">Shrey Singhal@ShreySinghal</span>
                 <span id="termText2" class="branch">(main)</span>
                 <span id="termText3" class="arrow"> ~></span>
+                <span id="animatedText1" class="text-Intro"></span>
+                <span id="cursor">.</span>
             </p>
 
-            <span id="cursor">.</span>
 
             <!-- Help -->
-            <p class="terminal-intro" id="fixedText3">
+            <p class="terminal-intro" id="t4">
                 <span id="text1" class="user"></span>
                 <span id="text2" class="branch"></span>
                 <span id="text3" class="arrow"></span>
-                <input type="text" id="textField">
+                <span id="fixedText3" class="text-Intro">
+                    <input type="text" id="textField">
+                </span>     
             </p>
 
         </section>
